--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "youtube-search-api": "^2.0.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
